# cxx-ci

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  configure.cmake
.github/workflows/: ci.yml
amsdk-cmake/: CompileOption.cmake
amsdk-cmake/Valve/Source/1/: DetectBranch.cmake
amsdk-cmake/Valve/Source/1/Branch/CSGO/: CSGO.cmake
src/: CMakeLists.txt  extension.cpp  extension.h
